[Add]: 2.7 上传图片和文件服务.
